# PHYParser

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: BSP.cpp  BSP.h  PHY.cpp  PHY.h
src/exceptions/: UnsupportedModelType.h
src/format/: compactsurfaceheader_t.h  ivpcompactedge_t.h  ivpcompactledge_t.h  ivpcompactledgenode_t.h  ivpcompactmopp_t.h  ivpcompactsurface_t.h  ivpcompacttriangle_t.h  modeltype.h  moppsurfaceheader_t.h  phyheader_t.h  vector.h
src/format/bsp/: dheader_t.h  dphysdisp_t.h  dphysmodel_t.h  lump_t.h
src/semantics/: PHYData.h  Solid.cpp  Solid.h
test/: CMakeLists.txt
test/src/: main.cpp  open-phy-file-dialog.cpp  open-phy-file-dialog.h  prompt.cpp  prompt.h
